model Product {
  id            String      @id @default(uuid())
  name          String
  description   String?
  sku           String      @unique
  barcode       String?     @unique
  price         Float
  cost          Float       @default(0.0)
  stock         Int         @default(0)
  minStock      Int         @default(5)
  maxStock      Int?
  category      String?
  isActive      Boolean     @default(true)
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  // Relations
  stockLogs     StockLog[]
  transfers     TransferItem[]
  saleItems     SaleItem[]

  @@map("products")
}

model StockLog {
  id            String      @id @default(uuid())
  quantity      Int         // Can be positive (entry) or negative (exit)
  type          String      // "ENTRY" | "EXIT" | "ADJUSTMENT" | "SALE" | "TRANSFER" | "DAMAGE" | "DONATION" | "EXPIRATION"
  reason        String?
  previousStock Int
  newStock      Int
  createdAt     DateTime    @default(now())

  // Relations
  productId     String
  product       Product     @relation(fields: [productId], references: [id], onDelete: Cascade)

  employeeId    String
  employee      Employee    @relation(fields: [employeeId], references: [id])

  warehouseId   String?
  warehouse     Warehouse?  @relation(fields: [warehouseId], references: [id])

  @@map("stock_logs")
}

model Warehouse {
  id            String      @id @default(uuid())
  name          String
  location      String
  isActive      Boolean     @default(true)
  createdAt     DateTime    @default(now())

  // Relations
  stockLogs     StockLog[]
  transfersFrom Transfer[]  @relation("TransferFrom")
  transfersTo   Transfer[]  @relation("TransferTo")

  @@map("warehouses")
}

model Transfer {
  id            String        @id @default(uuid())
  status        String        @default("PENDING") // "PENDING" | "IN_TRANSIT" | "COMPLETED" | "CANCELLED"
  notes         String?
  createdAt     DateTime      @default(now())
  completedAt   DateTime?

  // Relations
  fromWarehouseId String
  fromWarehouse   Warehouse   @relation("TransferFrom", fields: [fromWarehouseId], references: [id])

  toWarehouseId   String
  toWarehouse     Warehouse   @relation("TransferTo", fields: [toWarehouseId], references: [id])

  employeeId      String
  employee        Employee    @relation(fields: [employeeId], references: [id])

  items           TransferItem[]

  @@map("transfers")
}

model TransferItem {
  id          String    @id @default(uuid())
  quantity    Int

  // Relations
  transferId  String
  transfer    Transfer  @relation(fields: [transferId], references: [id], onDelete: Cascade)

  productId   String
  product     Product   @relation(fields: [productId], references: [id])

  @@map("transfer_items")
}
